1.删除常用字符编码常量声明,改用JDK standCharsets 2.移动StringHelper中字符串编码方法到CharsetHelper中 3.StringHelper增加删除任意字符方法 4.HttpHelper增加json结果转为java对象方法